--- a/resources/style.css
+++ b/resources/style.css
@@ -14,6 +14,11 @@ a{
     color: #333;
     font-family: "Proxima Nova",sans-serif
 }
+button{
+    border: none;
+    padding: 0;
+    background-color: transparent;
+}
 /* HEADER */
 header nav{
     display:flex;
@@ -46,6 +51,15 @@ header .search input{
     margin-right: 0.5em;
     font-size: 18px;
     padding: 11px 16px 11px 16px;
+}
+header button{
+    height: 48px;
+    width: 48px;
+    /* padding:2px; */
+}
+.icon-search {
+    background-image: url(search.svg);
+    background-repeat: no-repeat;
 }
 [role="navigation"] > ul{
     display:none;
@@ -134,6 +148,16 @@ footer a:hover{
     color:#275F89;   
 }
 
+/* LOADER */
+.loader{
+    position:relative;
+    margin:auto;
+    align-items:center;
+    background:url(loader.svg) no-repeat center center;
+    width: 100px;
+    height: 100px;
+}
+/* DESKTOP */
 @media all and (min-width: 800px){
     [role="navigation"] > ul{
         display:flex;
@@ -160,4 +184,15 @@ footer a:hover{
     footer > nav:nth-child(1) > ul > li {
         padding: 0.5em;
     }
+}
+
+/* STATES */
+.flex{
+    display: flex;
+}
+.show{
+    display: block;
+}
+.hide{
+    display:none;
 }
