--- a/resources/style.css
+++ b/resources/style.css
@@ -51,6 +51,13 @@ header .search input{
     margin-right: 0.5em;
     font-size: 18px;
     padding: 11px 16px 11px 16px;
+    border-radius:25px;
+}
+header .search input:focus{
+    border: #41829c 0.1em solid;    
+    border-radius:25px;
+    /* ILLEGAL STUFF? */
+    outline:none;
 }
 .icon-search {
     background-image: url(search.svg);
