--- a/resources/style.css
+++ b/resources/style.css
@@ -39,7 +39,7 @@ header img{
 header .search{
     display:flex;
     background-color: #E7F1F5;
-    height: 7%;
+    height: 5%;
     width: 100%;
 }
 header .search input{
@@ -51,13 +51,6 @@ header .search input{
     margin-right: 0.5em;
     font-size: 18px;
     padding: 11px 16px 11px 16px;
-    border-radius:25px;
-}
-header .search input:focus{
-    border: #41829c 0.1em solid;    
-    border-radius:25px;
-    /* ILLEGAL STUFF? */
-    outline:none;
 }
 .icon-search {
     background-image: url(search.svg);
@@ -133,7 +126,7 @@ header .search input:focus{
 footer{
     align-content: flex-end;
     background-color: #F5F5F5;
-    border-top: 2px solid #6EC8E5;
+    /* border-top: 2px solid #6EC8E5; */
 }
 footer nav ul{
     display:flex;
@@ -183,6 +176,16 @@ footer a:hover{
     header img {
         width: 20%;
     }
+    header .search input{
+        border-bottom-right-radius: 25px;
+        border-top-right-radius: 25px;
+    }
+    header .search input:focus{
+        border: #41829c 0.1em solid;    
+        border-radius:25px;
+        /* ILLEGAL STUFF? */
+        outline:none;
+    }
     .icon-search {
         display:flex;
     }
@@ -190,7 +193,8 @@ footer a:hover{
         flex-flow: row wrap;
     }
     .container > .item-container{
-        flex: 20%;
+        flex: 19%;
+        border: 2px solid #6EC8E5;
     }
     .container .list-item-price{
         visibility: visible;
