--- a/resources/style.css
+++ b/resources/style.css
@@ -6,6 +6,9 @@ body{
     font-size:110%;
     color:#333;
 }
+main{
+    display:flex;
+}
 li{
     display:flex;
 }
@@ -87,8 +90,22 @@ header .search input{
     align-self:center;
     color: white;
 }
-
+/* FILTER */
+aside{
+    display:none;
+    flex:20%;
+    border-bottom: 2px solid #6EC8E5;
+    border-top: 2px solid #6EC8E5;
+}
+aside > ul{
+    -webkit-padding-start: 0;
+    margin-left: 1.2em;
+    margin-right: 1em;
+}
 /* IMAGES */
+#search-results{
+    flex:100%;
+}
 .container{
     display:flex;
     flex-direction: column;
@@ -187,6 +204,9 @@ footer a:hover{
         outline:none;
     }
     .icon-search {
+        display:flex;
+    }
+    aside{
         display:flex;
     }
     .container{
