--- a/resources/style.css
+++ b/resources/style.css
@@ -256,6 +256,7 @@ footer a:hover{
 /* PRODUCT DETAIL PAGE */
 .product-container{
    display:flex;
+   flex-flow: row wrap!important;
    margin-top:0 !important;
 }
 .product-container img{
