--- a/resources/style.css
+++ b/resources/style.css
@@ -270,7 +270,7 @@ footer a:hover{
     display: flex;
     opacity:1;
 }
-.product-table:hover .product-details-container{
+.product-table:hover .product-details-list{
     display:flex;
     opacity:0.9;
 }
@@ -280,7 +280,7 @@ footer a:hover{
 .product-table:hover{
     cursor:pointer;
 }
-.product-details-container{
+.product-details-list{
     display:none;
     flex-direction:column;
     background: #FFFFFF;
@@ -289,7 +289,6 @@ footer a:hover{
     position:absolute;
     right: 0%;
     bottom: -250px;
-    
     position: absolute;
     -webkit-animation: slide 0.5s forwards;
     -webkit-animation-delay: 2s;
@@ -298,11 +297,23 @@ footer a:hover{
 }
 
 @-webkit-keyframes slide {
-    100% { bottom: 0; }
+    100% { bottom: -20px; }
 }
 
 @keyframes slide {
-    100% { bottom: 0; }
+    100% { bottom: -20px; }
+}
+
+.product-details-list-obj{
+    display: flex;
+    justify-content: space-between;
+}
+.product-label{
+    font-weight:bold;
+    font-family: Georgia, serif;
+}
+.product-details-list-obj label:last-child{
+    font-family: Georgia, serif;
 }
 .product-table label{
     opacity:0.9;
