--- a/resources/style.css
+++ b/resources/style.css
@@ -1,15 +1,28 @@
 body{
+    display:-webkit-box;
+    display:-webkit-flex;
+    display:-ms-flexbox;
     display:flex;
-    flex-direction:column;
+    -webkit-box-orient:vertical;
+    -webkit-box-direction:normal;
+    -webkit-flex-direction:column;
+        -ms-flex-direction:column;
+            flex-direction:column;
     margin:0;
     font-family:sans-serif;
     font-size:110%;
     color:#333;
 }
 main{
+    display:-webkit-box;
+    display:-webkit-flex;
+    display:-ms-flexbox;
     display:flex;
 }
 li{
+    display:-webkit-box;
+    display:-webkit-flex;
+    display:-ms-flexbox;
     display:flex;
 }
 a{
@@ -24,6 +37,9 @@ button{
 }
 /* HEADER */
 header nav{
+    display:-webkit-box;
+    display:-webkit-flex;
+    display:-ms-flexbox;
     display:flex;
     height: 7%;
     color: white;
@@ -31,22 +47,35 @@ header nav{
     border-bottom: 2px solid #6EC8E5;
 }
 header .logo{
-    flex:100%;
+    -webkit-box-flex:100%;
+    -webkit-flex:100%;
+        -ms-flex:100%;
+            flex:100%;
+    display:-webkit-box;
+    display:-webkit-flex;
+    display:-ms-flexbox;
     display:flex;
 }
 header img{
     height:70%;
     width: 100%;
-    align-self:center;
+    -webkit-align-self:center;
+        -ms-flex-item-align:center;
+            align-self:center;
 }
 header .search{
+    display:-webkit-box;
+    display:-webkit-flex;
+    display:-ms-flexbox;
     display:flex;
     background-color: #E7F1F5;
     height: 5%;
     width: 100%;
 }
 header .search input{
-    align-self:center;
+    -webkit-align-self:center;
+        -ms-flex-item-align:center;
+            align-self:center;
     height: 70%;
     width: 100%;
     border:none;
@@ -67,7 +96,8 @@ header .search input{
     margin-right: 0.5em;
     cursor: pointer;
     border-radius: 25px;
-    transition: background-color 1000ms ease-out;
+    -webkit-transition: background-color 1000ms ease-out;
+            transition: background-color 1000ms ease-out;
 }
 .icon-search:hover{
     background-color: #FFFFFF;
@@ -77,9 +107,11 @@ header .search input{
     margin:0;
 }
 [role="navigation"] > ul > li{
+    padding:0 24px;
     padding: 0 1.5rem;
     border-left: 1px solid #e6a312;
-    transition: background-color 1000ms ease-out;
+    -webkit-transition: background-color 1000ms ease-out;
+            transition: background-color 1000ms ease-out;
 }
 
 [role="navigation"] > ul > li:hover {
@@ -87,7 +119,9 @@ header .search input{
     cursor:pointer;
 }
 [role="navigation"] a{
-    align-self:center;
+    -webkit-align-self:center;
+        -ms-flex-item-align:center;
+            align-self:center;
     color: white;
 }
 
@@ -128,7 +162,10 @@ input[type=range]::-webkit-slider-thumb {
 /* FILTER */
 aside{
     display:none;
-    flex: 25%;
+    -webkit-box-flex: 25%;
+    -webkit-flex: 25%;
+        -ms-flex: 25%;
+            flex: 25%;
     /* border-bottom: 2px solid #6EC8E5; */
     /* border-top: 2px solid #6EC8E5; */
     font-family:"Proxima Nova",sans-serif
@@ -185,12 +222,25 @@ aside a{
 
 /* IMAGES */
 #search-results{
-    flex:100%;
+    -webkit-box-flex:100%;
+    -webkit-flex:100%;
+        -ms-flex:100%;
+            flex:100%;
 }
 .container{
+    display:-webkit-box;
+    display:-webkit-flex;
+    display:-ms-flexbox;
     display:flex;
-    flex-direction: column;
-    justify-content:center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack:center;
+    -webkit-justify-content:center;
+        -ms-flex-pack:center;
+            justify-content:center;
     width:100%;
 }
 .container > .item-container{
@@ -212,22 +262,33 @@ aside a{
     background: rgb(85, 36, 26);
     padding:0.2em;
     opacity: 0.9;
+    filter:alpha(opacity=90);
     border: rgb(131, 207, 238) solid 10px;
     border-radius: 15px 75px 20px;
 }
 .item-container:hover{
     opacity:0.5;
+    filter:alpha(opacity=50);
     cursor:pointer;
 }
 
 /* FOOTER */
 footer{
-    align-content: flex-end;
+    -webkit-align-content: flex-end;
+        -ms-flex-line-pack: end;
+            align-content: flex-end;
     background-color: #F5F5F5;
 }
 footer nav ul{
+    display:-webkit-box;
+    display:-webkit-flex;
+    display:-ms-flexbox;
     display:flex;
-    flex-direction:column;
+    -webkit-box-orient:vertical;
+    -webkit-box-direction:normal;
+    -webkit-flex-direction:column;
+        -ms-flex-direction:column;
+            flex-direction:column;
     -webkit-padding-start: 0;
 }
 footer > nav:nth-child(1) > ul > li:nth-child(1){
@@ -237,15 +298,28 @@ footer > nav:nth-child(1) > ul > li{
     padding: 0.8em;
 }
 footer > nav:nth-child(1){
+    display:-webkit-box;
+    display:-webkit-flex;
+    display:-ms-flexbox;
     display:flex;
-    flex-direction:column;
-    align-items: center;
+    -webkit-box-orient:vertical;
+    -webkit-box-direction:normal;
+    -webkit-flex-direction:column;
+        -ms-flex-direction:column;
+            flex-direction:column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 footer > nav:nth-child(2){
     background-color: #EDEDED;
     color: #666;
     padding:1em;
-    align-items:flex-end;
+    -webkit-box-align:end;
+    -webkit-align-items:flex-end;
+        -ms-flex-align:end;
+            align-items:flex-end;
 }
 footer a{
     color:#3895D2;
@@ -255,34 +329,55 @@ footer a:hover{
 }
 /* PRODUCT DETAIL PAGE */
 .product-container{
+   display:-webkit-box;
+   display:-webkit-flex;
+   display:-ms-flexbox;
    display:flex;
-   flex-flow: row wrap!important;
+   -webkit-flex-flow: row wrap!important;
+       -ms-flex-flow: row wrap!important;
+           flex-flow: row wrap!important;
    margin-top:0 !important;
 }
 .product-container img{
-    flex: 20%;
+    -webkit-box-flex: 20%;
+    -webkit-flex: 20%;
+        -ms-flex: 20%;
+            flex: 20%;
     width: 100%;
 }
 .product-table{
     /* max-width: 50%; */
     position:relative;
     width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
     opacity:1;
+    filter:alpha(opacity=100);
 }
 .product-table:hover .product-details-list{
+    display:-webkit-box;
+    display:-webkit-flex;
+    display:-ms-flexbox;
     display:flex;
     opacity:0.9;
+    filter:alpha(opacity=90);
 }
 .product-table:hover img{
     opacity:0.5;
+    filter:alpha(opacity=50);
 }
 .product-table:hover{
     cursor:pointer;
 }
 .product-details-list{
     display:none;
-    flex-direction:column;
+    -webkit-box-orient:vertical;
+    -webkit-box-direction:normal;
+    -webkit-flex-direction:column;
+        -ms-flex-direction:column;
+            flex-direction:column;
     background: #FFFFFF;
     border-top-left-radius: 25px;
     padding: 5px;
@@ -292,8 +387,10 @@ footer a:hover{
     position: absolute;
     -webkit-animation: slide 0.5s forwards;
     -webkit-animation-delay: 2s;
-    animation: slide 0.5s forwards;
-    animation-delay: 0.2s;
+    -webkit-animation: slide 0.5s forwards;
+            animation: slide 0.5s forwards;
+    -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s;
 }
 
 @-webkit-keyframes slide {
@@ -305,8 +402,14 @@ footer a:hover{
 }
 
 .product-details-list-obj{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .product-label{
     font-weight:bold;
@@ -317,6 +420,7 @@ footer a:hover{
 }
 .product-table label{
     opacity:0.9;
+    filter:alpha(opacity=90);
     padding:0.5em;
     cursor: pointer;
 }
@@ -330,7 +434,10 @@ footer a:hover{
 .loader{
     position:relative;
     margin-top:auto;
-    align-items:center;
+    -webkit-box-align:center;
+    -webkit-align-items:center;
+        -ms-flex-align:center;
+            align-items:center;
     background:url(loader.svg) no-repeat center center;
     width: 100px;
     height: 100px;
@@ -338,6 +445,9 @@ footer a:hover{
 /* DESKTOP */
 @media all and (min-width: 800px){
     [role="navigation"] > ul{
+        display:-webkit-box;
+        display:-webkit-flex;
+        display:-ms-flexbox;
         display:flex;
     }
     header .logo{
@@ -358,17 +468,28 @@ footer a:hover{
         outline:none;
     }
     .icon-search {
+        display:-webkit-box;
+        display:-webkit-flex;
+        display:-ms-flexbox;
         display:flex;
     }
     aside{
+        display:-webkit-box;
+        display:-webkit-flex;
+        display:-ms-flexbox;
         display:flex;
     }
     .container{
-        flex-flow: row wrap;
+        -webkit-flex-flow: row wrap;
+            -ms-flex-flow: row wrap;
+                flex-flow: row wrap;
         margin-top: 28px;
     }
     .container > .item-container{
-        flex: 35%;
+        -webkit-box-flex: 35%;
+        -webkit-flex: 35%;
+            -ms-flex: 35%;
+                flex: 35%;
         border: 2px solid #E7F1F5;
         margin: 9px;
         margin-bottom:50px;
@@ -380,15 +501,27 @@ footer a:hover{
         width: 30%;
     }
     footer > nav:nth-child(1){
-        flex-direction: row;
-        justify-content:space-around;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-justify-content:space-around;
+            -ms-flex-pack:distribute;
+                justify-content:space-around;
     }
     footer > nav:nth-child(1) > ul > li {
         padding: 0.5em;
     }
     footer > nav:nth-child(2) > ul{
+        display:-webkit-box;
+        display:-webkit-flex;
+        display:-ms-flexbox;
         display:flex;
-        align-items: flex-end;
+        -webkit-box-align: end;
+        -webkit-align-items: flex-end;
+            -ms-flex-align: end;
+                align-items: flex-end;
     }
 
     .product-table{
@@ -425,6 +558,9 @@ footer a:hover{
 
 /* STATES */
 .flex{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
 }
 .show{
