--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -243,3 +243,9 @@ a {
 @media screen and (max-width: 42em) {
   .site-footer {
     font-size: 0.9rem; } }
+
+
+.mydiv {  
+  opacity: 0.55; /* CSS3 */
+  filter: alpha(opacity=55); /* IE6+ */
+}
